--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="Shield of Wrath Quiz – Embrace the Curse Series">
     <meta property="og:description"
         content="Test your knowledge of The Rising of the Shield Hero. Face the flames and prove yourself worthy!">
-    <meta property="og:image" content="og-image.png">
+    <meta property="og:image" content="https://divyansh3105.github.io/Shield-of-Wrath/asset/og-image.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="og-image.png">
+    <meta name="twitter:image" content="https://divyansh3105.github.io/Shield-of-Wrath/asset/og-image.png">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Poppins:wght@400;600;700&display=swap"
