add sitemap and robots.txt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         content="Test your knowledge of The Rising of the Shield Hero. Face the flames and prove yourself worthy!">
     <meta property="og:image" content="https://divyansh3105.github.io/Shield-of-Wrath/asset/og-image.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:url" content="https://divyansh3105.github.io/Shield-of-Wrath/">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
