--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="asset/favicon.png">
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico">
 
     <!-- Meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Test your knowledge of The Rising of the Shield Hero. Face the flames and prove yourself worthy!">
+    <meta name="keywords"
+        content="Shield Hero quiz, Rising of the Shield Hero, Naofumi Iwatani, anime quiz, manga quiz, Shield of Wrath, Curse Series, Raphtalia, Shield Hero trivia, anime trivia, isekai quiz, Shield Hero test, Tate no Yuusha, anime knowledge test, Shield Hero game">
     <title>Shield of Wrath Quiz</title>
 
     <!-- Open Graph Meta Tags -->
